[package]
name = "wired-pow-poster"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
env_logger = "0.11.5"
log = "0.4.22"
nostr-sdk = "0.35.0"
rayon = "1.10.0"
tokio = { version = "1.40.0", features = ["full", "rt"] }

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1
debug = false
