[package]
name = "noteslinger"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
env_logger = "0.11"
log = "0.4"
nostr-sdk = "0.35"
rayon = "1"
tokio = { version = "1.40", features = ["full", "rt"] }

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1
debug = false

# RUSTFLAGS="-C target-cpu=native"
